--- a/index.html
+++ b/index.html
@@ -679,6 +679,8 @@
                 <p class="col-lg-8 copy-footer-29">© 2022 CourseHut. All rights reserved. 
                     <p class="col-lg-8 copy-footer-29">
                         Designed and Maintained by Sameer Hussain
+                        
+                     <iframe src='https://webchat.botframework.com/embed/coursesehut-xqzi4uo?s=5UjSKh1T8ao.uV_Q5GvK2DsKIYhl7RzvwW-tduoRDOHmVms-JFtgJHg'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 
                 <div class="col-lg-4 footer-list-29">
                     <ul class="d-flex text-lg-right justify-content-center mt-lg-0 mt-3">
